# riddle_ork

./: README.md
capture/cells/: PlaneFilter.cpp
linemod/: CMakeLists.txt
linemod/conf/: detection.ros.ork  training.ork
linemod/src/: linemod_detect.cpp  linemod_train.cpp
object_recognition_core/launch/: detection.launch
object_recognition_core/python/object_recognition_core/utils/: parser.py
ork_morse_interface/: CMakeLists.txt  package.xml  pr2.urdf
ork_morse_interface/cfg/: ORKMorse.cfg
ork_morse_interface/launch/: tf_pr2.launch
ork_morse_interface/src/: main.cpp
ork_renderer/src/: model.cpp  utils.cpp
reconstruction/apps/: mesh_object
reconstruction/src/: meshing.mlx  meshing_ballPivoting.mlx
riddle_ork/: CMakeLists.txt  package.xml
tabletop/conf/: detection.object.ros.ork  detection.table.ros.ork
